modificato l'estenzione del file login in .html

--- a/views/controllaApp.ejs
+++ b/views/controllaApp.ejs
@@ -27,7 +27,7 @@
 
 	<div class='mainBlockBox'>
 
-			<div class='box1ManageLogIn' param-valore='login' onclick="prendival(this)">
+			<div class='box1ManageLogIn' param-valore='login.html' onclick="prendival(this)">
 				Login
 			</div>
 
