--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<meta http-equiv="refresh" content="5; url='/login'" />
+	<meta http-equiv="refresh" content="5; url='/login.html'" />
 	<link href="./main.css" rel='stylesheet' type='text/css' />
 </head>
 <body id='mainBoxRedirectErr'>
