aggiunto il collegamento a login.html

--- a/views/controllaDB.ejs
+++ b/views/controllaDB.ejs
@@ -46,7 +46,7 @@
 				</div>
 
 	<p id='bottom-menu' >
-		<a href='/login'>User Login</a> | <a href='/registrazione.html'>Register User</a> 
+		<a href='/login.html'>User Login</a> | <a href='/registrazione.html'>Register User</a> 
 	</p>
 
 
