--- a/views/controllaDB.ejs
+++ b/views/controllaDB.ejs
@@ -5,9 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Controlla DB</title>
+	<link rel='stylesheet' type='text/css' href='./main.css' />
+ 
 </head>
-<body>
-	
+<body >
+<div id='mainContainer'>
 
 	<div id='controllaDbBox'>
 
@@ -60,97 +62,7 @@
 </div>
 
 
+</div>
+
 </body>
 </html>
-
-
-
-<style>
-
-*{
-	box-sizing: border-box;
-}
-
-body{
-	background: linear-gradient( 270deg,darkblue 5%, lightblue 80%, green, lightgreen 15%);
-	box-sizing: border-box;
-	overflow: hidden;
-}
-
-#controllaDbBox{
- 	width: 85%;
-	/* border: solid mediumseagreen 1px; */
-	margin: 0 auto;
-	height: 350px;
-
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -65%)
-}
-
-#controllaDbBox h2{
-	text-align: center;
-	color: rgb(90, 9, 83);
-
-}
-
-
-
-
-#controllaDbBox button{
-	width: 100%;
-	margin: 11px 0 0 0;
-}
-
-
-#controllaDbBoxOutput{
-	position: relative;
-	width: 100%;
-	border: solid green 1px;
-	height: 250px;
-	margin-top: 22px;
-	overflow-y: auto;
-
-	background: #000;
-	color: rgb(24, 172, 24);
-}
-
-
-#bottom-menu{
-	
-	/* position: absolute;  */
-	position: relative;
-	/* top: 55px; */
-	margin-top: 33px;
-	padding: 7px; 	
-	bottom: 22px; 
-	width: 100vw;
-}
-
-#bottom-menu a:hover{
-	color: white;
-}
-
-#bottom-menu a{
-	text-decoration: none;
-}
-
-
-#footer{
-
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	background: rgb(6, 6, 54);
-	color: rgb(48, 112, 68);
-	padding: 7px;
-	font-size: 1.2em;
-	text-align: center;
-	width: 100%;
-	margin: 0 auto;
-	font-size: 1.2em;
-
-}
-
-</style>
