--- a/fileStatici/main.css
+++ b/fileStatici/main.css
@@ -1,6 +1,23 @@
+/* 
+
+TOC:
+
+controllaApp.ejs
+paginaHome.ejs
+controllaDB.ejs
+fileNotFound.ejs
+logOnInvalid.ejs
+
+*/
+
+
 body{
-	background: lightblue;
+	padding: 0;
+	margin: 0;
+	/* background: rgb(95, 230, 95); */
+	overflow: hidden;
 }
+
 
 #mainBoxRedirectErr {
 
@@ -30,3 +47,437 @@ color: red;
 padding: 2px;
 
 }
+
+
+
+
+
+
+
+/* controllaApp.ejs */
+
+
+#controllaAppBody
+{
+
+box-sizing: border-box;
+    height: 100vh;
+    overflow-y: hidden					
+}
+
+
+
+#titoloControllaApp{
+ color: #9c27b0;
+ text-decoration: underline;
+ margin-top: 3px;
+ text-align: center;
+}
+
+
+#contenitoreParag > div
+{
+ position: relative;
+ top: 33px;
+ margin: 7px 7px 1.5px 7px;
+ font-size: 1.1em;
+ font-style: italic;
+ 
+}
+
+
+
+.mainBlockBox{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(2, 1fr);
+	border: solid green 1px;
+
+	margin: 77px 7px 77px 7px ;
+	grid-gap: 7px;
+	padding: 22px;
+	height: 320px;
+ 
+ 	align-items: center;
+	justify-items: stretch;
+
+}
+
+
+.mainBlockBox > div{
+	border: solid blue 1px;
+	text-align: center;
+	align-self: stretch;
+	justify-content: stretch;
+	border: solid yellow 2px;
+	padding-top: 60px;
+	font-size:1.6em;
+
+ }
+
+
+.mainBlockBox > div:hover
+{
+	cursor: pointer;
+	background: rgba(23, 6, 63,.9);
+	border: solid mediumaquamarine 2px;
+	color: white;
+	font-size:1.6em;
+	border: solid yellow 2px;
+}
+
+.mainBlockBox > div
+{
+	cursor: pointer;
+	background: rgba(23, 6, 63,.7);
+	border: solid mediumaquamarine 2px;
+	color: white;
+	font-size:1.6em;
+}
+
+
+.box1ManageDB{
+	grid-column: 1/3;
+}
+
+
+#footer{
+	position: absolute;
+	bottom: -3px;
+	width: 100%;
+	background: rgb(6, 6, 54);
+	color: #ddd;
+	padding: 7px;
+	font-size: 1.2em;
+	text-align: center;
+}
+
+
+/* controllaApp.ejs */
+
+
+
+
+/* paginaHome.ejs */
+
+
+#bodyPagHome{
+	box-sizing: border-box;
+	height: 100vh;
+	overflow-y: hidden; 
+	
+}
+
+#msgHome{
+
+ padding: 7px;
+ background: rgba(24, 178, 224,.4);
+ color: white;
+ 
+
+}
+
+#mgsToUserName{
+	background: mediumaquamarine;
+	color: blue;
+	font-size: 1.8em;
+}
+
+
+#footerDiv{
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	background: rgb(6, 6, 54);
+	color: #ddd;
+	padding: 7px;
+	font-size: 1.2em;
+	text-align: center;
+}
+
+
+
+/* paginaHome.ejs */
+
+
+
+
+
+/* controllaDB.ejs */
+
+
+#mainContainer{
+	width: 100vw;
+	height: 100vw;
+	background: linear-gradient( 20deg,darkblue 5%, lightblue 80%, green, lightgreen 15%);
+
+}
+
+#controllaDbBox{
+ 	width: 85%;
+	/* border: solid mediumseagreen 1px; */
+	margin: 0 auto;
+	height: 350px;
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -65%)
+}
+
+#controllaDbBox h2{
+	text-align: center;
+	color: rgb(90, 9, 83);
+
+}
+
+
+
+
+#controllaDbBox button{
+	width: 100%;
+	margin: 11px 0 0 0;
+}
+
+
+#controllaDbBoxOutput{
+	position: relative;
+	width: 100%;
+	border: solid green 1px;
+	height: 250px;
+	margin-top: 22px;
+	overflow-y: auto;
+	font-size: 1.2em;
+	background: #000;
+	color: rgb(24, 172, 24);
+}
+
+
+#bottom-menu{
+	
+	/* position: absolute;  */
+	position: relative;
+	/* top: 55px; */
+	margin-top: -33px;
+	padding: 7px; 	
+	bottom: 22px; 
+	width: 100vw;
+}
+
+#bottom-menu a:hover{
+	color: white;
+}
+
+#bottom-menu a{
+	text-decoration: none;
+}
+
+
+#footer{
+
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	background: rgb(6, 6, 54);
+	color: rgb(48, 112, 68);
+	padding: 7px;
+	font-size: 1.2em;
+	text-align: center;
+	width: 100%;
+	margin: 0 auto;
+	font-size: 1.2em;
+
+}
+
+
+/* controllaDB.ejs */
+
+
+/* fileNotFound.ejs */
+
+
+
+
+
+
+#mainBoxRedirectErr  h2{
+color: rgb(71, 145, 119);
+padding: 2px;
+
+}
+
+
+#fileNotFoundBody{
+	background: rgb(22, 22, 48);
+}
+
+#fileNotFoundParag{
+	color: rgb(192, 192, 209);
+	padding: 7px;
+	font-size: 22px;
+}
+
+
+/* fileNotFound.ejs */
+
+
+
+/* logOnInvalid.ejs */
+
+
+#invalidLoginTitle{
+color: rgb(71, 145, 119);
+padding: 2px;
+
+}
+
+
+#invalidLoginBody{
+	background: rgb(22, 22, 48);
+}
+
+#invalidLoginParag{
+	color: rgb(192, 192, 209);
+	padding: 7px;
+	font-size: 22px;
+}
+
+
+/* logOnInvalid.ejs */
+
+
+
+
+
+
+/* registrazione.html */
+
+
+
+
+body h1{
+	margin: 22px 7px;
+	/* background: rgb(185, 219, 185); */
+	color: rgb(143, 101, 101);
+	
+}
+
+
+#fromLogInBox  div
+{
+	margin: 22px 7px;
+}
+
+
+#fromLogInBox  
+{
+
+	margin: 77px 7px;
+}
+
+
+	#fromLogInBox{
+
+		width: 85%;
+		height: 350px;
+		border: solid rgb(8, 73, 51) 11px;
+		margin: 0 auto;
+		padding: 11px;
+
+	}
+
+		#fromLogInBox  input[type=text]{
+			/* position: relative; */
+			display: block;
+		}
+
+		#fromLogInBox  input[type=submit]
+		{
+			padding:0;
+			margin:0;
+			width: 100%;
+
+		}
+
+		input[type=submit]:hover{
+			cursor: pointer;
+		}
+
+
+		#fromLogInBox  input{
+			display: block;
+			width: 100%;
+		}
+
+/* 
+
+	#titoloBasso div{
+	text-align: center;
+	width: 100vw;
+	position: absolute;
+	display: inline-block;
+	border: solid #ddd 1px;
+	font-size: 1.4em;
+	font-family: fantasy;
+	background: rgb(4, 4, 44);
+	color: rgb(48, 112, 68);
+
+} 
+
+*/
+
+#titoloBasso{
+	position: absolute;
+	bottom: 0px;
+}
+
+
+#fromLogInBox  span
+{
+  position: relative;
+  left: -11px;
+}
+
+#fromLogInBox  input[type=checkbox]
+{
+  position: relative;
+  left: -11px;
+  float: left;
+  width: 33px;
+}
+
+
+
+#footer{
+	position: absolute;
+	bottom: 0px;
+	width: 100vw;
+	background: rgb(6, 6, 54);
+	color: #ddd;
+	padding: 7px;
+	font-size: 1.2em;
+	text-align: center;
+}
+
+
+#bottom-menu{
+	
+	/* position: absolute;  */
+	position: relative;
+	top: 55px;
+	padding: 7px; 	
+	bottom: 22px; 
+	width: 100vw;
+}
+
+#bottom-menu a:hover{
+	color: white;
+}
+
+#bottom-menu a{
+	text-decoration: none;
+}
+
+
+
+/* registrazione.html */
