--- a/views/fileNotFound.ejs
+++ b/views/fileNotFound.ejs
@@ -5,14 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<link rel='stylesheet' type='text/css' href='./main.css' />
+
 </head>
-<body>
+<body id='fileNotFoundBody'>
 	
-<h1>
+<h1 id='fileNotFoundTitle'>
 	File not found
 </h1>
 
-<p>
+<p id='fileNotFoundParag'>
 	La richiesta effettuata non è accessibile!
 </p>
 
